Clarified VM installation instructions in Installation and Upgrade https://github.com/SUSE/spacewalk/issues/25106

--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -125,7 +125,8 @@ Create the [path]``root/ignition/config.ign`` file with the following content:
 }
 ----
 
-Prepare the [systemitem]``Ignition`` ISO file using the command:
+Prepare the [systemitem]``Ignition`` ISO file.
+From the parent directory of the [literal]``root`` directory specified in the example, execute the command:
 
 ----
 mkisofs -full-iso9660-filenames -o suma_ignition.iso -V ignition root
@@ -147,8 +148,8 @@ When the system is booted for the first time, [systemitem]``Cloud Init service``
 
 [systemitem]``Cloud Init`` uses few configuration files in the YAML format. Used files are named [path]``meta-data``, [path]``network-config`` and [path]``user-data``.
 
-[systemitem]``Cloud Init`` allows numerous sources where to store configuration data. 
-In this guide we use local iso image with volume id [literal]``cidata`` as a source. 
+[systemitem]``Cloud Init`` allows numerous sources where to store configuration data.
+In this guide we use local iso image with volume id [literal]``cidata`` as a source.
 The directory structure must look as follows:
 
 ----
@@ -166,6 +167,8 @@ For example:
 ----
 
 The [systemitem]``Cloud Init`` allows many management options. For a complete specification, refer to Cloud Init specification (https://cloudinit.readthedocs.io/en/latest/index.html).
+
+
 
 === Set Up Root Password Using Cloud Init
 
@@ -197,6 +200,7 @@ chpasswd:
 ----
 
 Prepare [systemitem]``Cloud Init`` ISO file using the command:
+From inside the [literal]``root`` directory specified in the example, execute the command:
 
 ----
 mkisofs -rational-rock -joliet -o suma_cloudinit.iso -V cidata network-config meta-data user-data
