--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -230,7 +230,7 @@ Create a virtual machine with three additional virtual disks required for the {p
 . With the [guimenu]``Network selection`` drop-down menu select the configured bridge device.
 . Confirm with btn:[Finish].
 . In the overview dashboard, at the bottom of the left navigation bar, click btn:[Add Hardware] to create additional virtual disks with the following specifications.
-  These disks will be partitioned and mounted in <<proc.sumavm.susemgr.prep>>.
+  These disks will be partitioned and mounted in <<proc.minimal.susemgr.prep>>.
 +
 
 [NOTE]
