--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -268,7 +268,11 @@ This sections describes VMware configurations, focusing on the creation of an ex
 . Create and name a new virtual machine based on the Guest OS Family [systemitem]``Linux`` and Guest OS Version {sle} 15 (64-bit).
 
 . In [guimenu]``Customize settings`` browse to the uploaded [filename]``.vmdk`` using [systemitem]``IDE controller 0`` storage device in the [systemitem]``Controller Location``.
++
 
+// FIXME, per feedback: With KVM we recommend to create a separate disk for
+//        for pgsql (100 GB).  To avoid confusion, a setup with same
+//        disk layout and sizes would be good.  Proposals?
 . Add an additional [systemitem]``Hard Disk 2`` of 500 GB (or more).
 
 . Configure RAM and number of CPUs (at least 16 GB RAM and 4 CPUs).
@@ -276,7 +280,7 @@ This sections describes VMware configurations, focusing on the creation of an ex
 . Set the network adapter as required.
 
 . Set the [systemitem]``CD/DVD Drive 1`` to use the uploaded configuration as a [systemitem]``Datastore ISO``.
-  Tick the box next to btn:[Connect].
+  Click the box next to btn:[Connect].
   This drive must be present when you power on the machine initially.
 
 . Power on the VM, and log in using credentials set by configuration disk.
