space calc simplified (per feedback)

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -25,9 +25,9 @@ For {productname} {smr} hardware requirements, see xref:retail:retail-requiremen
 * Minimum for base installation 100 GB
 * Plus a minimum of 130 GB for repository data
 
-By default the {productname} Server container stores packages in the [path]``/var/lib/containers/storage/volumes/var-spacewalk/`` directory.
+By default the {productname} Server container stores mirrored repository (packages or products), database, and other data in subdirectories of the [path]``/var/lib/containers/storage/volumes/`` directory.
 Repository synchronization fails if this directory runs out of disk space.
-Estimate how much space the [path]``/var/lib/containers/storage/volumes/var-spacewalk/`` directory requires based on the clients and repositories you plan to mirror.
+Estimate how much space the [path]``/var/lib/containers/storage/volumes/`` directory requires based on the number and kind of clients and repositories you plan to mirror.
 
 For more information about filesystem and partitioning details, see xref:installation-and-upgrade:hardware-requirements.adoc#install-hardware-requirements-storage[] and the detailed installation instructions in the Installation and Deployment sections of this guide.
 
@@ -56,30 +56,30 @@ For more information about filesystem and partitioning details, see xref:install
 | 20 GB
 
 |
-| [path]``/var/lib/containers/storage/volumes/var-pgsql``
-| Minimum 50 GB
+| [path]``/var/lib/containers/storage/volumes``
+| Minimum 150 GB (depending on the number of products)
 
 |
-| [path]``/var/lib/containers/storage/volumes/var-spacewalk``
-| Minimum storage required: 100 GB (this will be verified by the implemented check)
+| [path]``/var/lib/containers/storage/volumes/var-pgsql``
+| Minimum 50 GB
 
 * 50 GB for each {suse} product and Package Hub
 
 * 360 GB for each {redhat} product
 
-|
-| [path]``/var/lib/containers/storage/volumes/var-cache``
-| Minimum 10 GB.
-Add 100 MB per {suse} product, 1 GB per {redhat} or other product.
-Consider to double the space if the server is used for Inter-Server Synchronization (ISS)
-
-|
-| [path]``/var/lib/containers/storage/volumes/srv-www``
-| Minimum 100 GB
-
-* Storage requirments should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
-
 |===
+
+// |
+// | [path]``/var/lib/containers/storage/volumes/var-cache``
+// | Minimum 10 GB.
+// Add 100 MB per {suse} product, 1 GB per {redhat} or other product.
+// Consider to double the space if the server is used for Inter-Server Synchronization (ISS)
+// 
+// |
+// | [path]``/var/lib/containers/storage/volumes/srv-www``
+// | Minimum 100 GB
+// 
+// * Storage requirments should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
 
 
 The images by default have a 20 GB [literal]``/`` partition.
@@ -191,17 +191,17 @@ For more information about managing a large number of clients, see xref:speciali
 | Minimum 40 GB
 
 |
-| [path]``/var/lib/containers/storage/volumes/srv-www``
-| Minimum 100 GB
-
-* Storage requirments should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
-
-|
-| [path]``/var/lib/containers/storage/volumes/var-cache`` (Squid)
-| Minimum 100 GB
+| [path]``/var/lib/containers/storage/volumes``
+| Minimum 150 GB
 
 |===
 
+// /srv-www
+// * Storage requirments should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
+
+// |
+// | [path]``/var/lib/containers/storage/volumes/var-cache`` (Squid)
+// | Minimum 100 GB
 
 By default the {productname} Proxy container caches packages in the [path]``/var/lib/containers/storage/volumes/var-cache/`` directory.
 If there is not enough space available, the proxy will remove old, unused packages and replace them with newer packages.
