Apply suggestions from code review
Co-authored-by: Ornela Marić <omaric@suse.com>

--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -149,7 +149,7 @@ When the system is booted for the first time, [systemitem]``Cloud Init service``
 [systemitem]``Cloud Init`` uses few configuration files in the YAML format. Used files are named [path]``meta-data``, [path]``network-config`` and [path]``user-data``.
 
 [systemitem]``Cloud Init`` allows numerous sources where to store configuration data.
-In this guide we use local iso image with volume id [literal]``cidata`` as a source.
+In this guide we use local ISO image with volume id [literal]``cidata`` as a source.
 The directory structure must look as follows:
 
 ----
@@ -201,7 +201,7 @@ chpasswd:
       password: $2a$10$qV298UV11u9lCFDjpHpCUe1cErBiVR.G3shukxs3.2PAO1xhJWs0K
 ----
 
-Prepare [systemitem]``Cloud Init`` ISO file using the command:
+Prepare [systemitem]``Cloud Init`` ISO file.
 From inside the [literal]``root`` directory specified in the example, execute the command:
 
 ----
@@ -227,7 +227,7 @@ Create a virtual machine with three additional virtual disks required for the {p
 . Configure RAM and number of CPUs (at least 16 GB RAM and 4 CPUs).
   Confirm with btn:[Forward].
 . Set the name of your VM and select the [guimenu]``Customize configuration before install`` check box.
-. With the [guimenu]``Network selection`` drop-down menu select the configured bridge device.
+. From the [guimenu]``Network selection`` drop-down menu select the configured bridge device.
 . Confirm with btn:[Finish].
 . In the overview dashboard, at the bottom of the left navigation bar, click btn:[Add Hardware] to create additional virtual disks with the following specifications.
   These disks will be partitioned and mounted in <<proc.minimal.susemgr.prep>>.
