--- a/modules/client-configuration/pages/contact-methods-default.adoc
+++ b/modules/client-configuration/pages/contact-methods-default.adoc
@@ -6,7 +6,7 @@ By default, the {salt} Bundle implementation ([package]``venv-salt-minion``) wil
 For more information about {salt} in general, see xref:specialized-guides:salt/salt-overview.adoc[].
 
 ifeval::[{suma-content} == true]
-The Default Contact Method is the best scaling method.
+The default contact method ([literal]``Default``) is the best scaling method.
 All new {productname} features are supported.
 
 [IMPORTANT]
