--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -129,7 +129,7 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
-| {ubuntu} 22.04, 20.04 (*)
+| {ubuntu} 24.04, 22.04, 20.04 (*)
 | {check}
 | {cross}
 | {cross}
@@ -269,7 +269,7 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {cross}
 
-| {ubuntu} 22.04, 20.04
+| {ubuntu} 24.04, 22.04, 20.04 (*)
 | {check}
 | {cross}
 | {cross}
