--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -136,7 +136,7 @@ ifeval::[{suma-content} == true]
 | {check}
 | {cross}
 
-| {ubuntu} 22.04, 20.04 (*)
+| {ubuntu} 24.04, 22.04, 20.04 (*)
 | {check}
 | {cross}
 | {cross}
@@ -293,7 +293,7 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {cross}
 
-| {ubuntu} 22.04, 20.04 (*)
+| {ubuntu} 24.04, 22.04, 20.04 (*)
 | {check}
 | {cross}
 | {cross}
