--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
@@ -226,11 +226,10 @@ This sections describes VMware configurations, focusing on the creation of an ex
 
 . Download {productname} Server [filename]``.vmdk`` file then transfer a copy to your VMware storage.
 
-. Upload the prepared Ignition or Cloud Init disk file you created using the instructions above.
+. Make a copy of uploaded [filename]``.vmdk`` file using VMware web interface.
+  This will convert provided [filename]``.vmdk`` file to the format suitable for vSpere hypervisor.
 
 . Create and name a new virtual machine based on the Guest OS Family [systemitem]``Linux`` and Guest OS Version {sle} 15 (64-bit).
-
-. In [guimenu]``Customize settings`` browse to the uploaded [filename]``.vmdk`` using [systemitem]``IDE controller 0`` storage device in the [systemitem]``Controller Location``.
 
 . Add an additional [systemitem]``Hard Disk 2`` of 500 GB (or more).
 
@@ -238,11 +237,7 @@ This sections describes VMware configurations, focusing on the creation of an ex
 
 . Set the network adapter as required.
 
-. Set the [systemitem]``CD/DVD Drive 1`` to use the uploaded configuration as a [systemitem]``Datastore ISO``.
-  Check the box next to btn:[Connect].
-  This drive must be present when you power on the machine initially.
-
-. Power on the VM, and log in using credentials set by configuration disk.
+. Power on the VM, and follow firstboot dialogs.
 
 
 [[minimal.susemgr.prep]]
