--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -133,7 +133,7 @@ Double the space if the server is an ISS Master.
 | [path]``/var/lib/containers/storage/volumes/srv-www``
 | Minimum 100 GB
 
-* Storage requirments should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
+* Storage requirements should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
 
 |
 | Swap space
