Clarification for authentication with PAM.

--- a/modules/administration/pages/auth-methods-pam.adoc
+++ b/modules/administration/pages/auth-methods-pam.adoc
@@ -1,19 +1,28 @@
 [[auth-methods-pam]]
 = Authentication With PAM
 
-{productname} supports network-based authentication systems using pluggable authentication modules (PAM) using SSSD.
+{productname} supports network-based authentication systems using Pluggable Authentication Modules (PAM) using SSSD.
 PAM is a suite of libraries that allows you to integrate {productname} with a centralized authentication mechanism, eliminating the need to remember multiple passwords.
-{productname} supports LDAP, Kerberos, and other network-based authentication.
 
-[NOTE]
-====
-In usernames, additionally to alphanumeric characters, [literal]``-``, [literal]``_``, [literal]``.``, and [literal]``@`` are allowed.
-====
+{productname} supports LDAP, Kerberos, and other network-based authentication protocols.
 
+
+== SSSD Configuration
+
+[WARNING]
+====
+* Do not edit [path]``/etc/krb5.conf``.
+* Custom configuration needs to be saved in the [path]``/etc/rhn/krb5.conf.d`` directory.
+====
 
 
 .Procedure: Configuring SSSD
 . In the {productname} {webui}, navigate to menu:Users[Create User] and enable a new or existing user to authenticate with PAM.
++
+[NOTE]
+====
+In usernames, additionally to alphanumeric characters, [literal]``-``, [literal]``_``, [literal]``.``, and [literal]``@`` are also allowed.
+====
 . Check the [guimenu]``Pluggable Authentication Modules (PAM)`` checkbox.
   It is below the password and password confirmation fields.
 . Configure SSSD in the container.
@@ -39,11 +48,13 @@ mgradm restart
 ====
 Changing the password in the {productname} {webui} changes only the local password on the {productname} Server.
 If PAM is enabled for that user, the local password might not be used at all.
-In the above example, for instance, the Kerberos password is not changed.
+
+In the above example, for example, the Kerberos password is not changed.
 Use the password change mechanism of your network service to change the password for these users.
 ====
 
 
-For more information about configuring PAM, the SUSE Linux Enterprise Server Security Guide contains a generic example that also works for other network-based authentication methods.
+*SUSE Linux Enterprise Server Security Guide* contains a generic example that also works for other network-based authentication methods.
 It also describes how to configure an active directory service.
+
 For more information, see {sles-base-os-documentation}/part-auth.html.
