--- a/modules/administration/pages/disconnected-setup.adoc
+++ b/modules/administration/pages/disconnected-setup.adoc
@@ -211,3 +211,6 @@ mgrctl exec -ti -- mgr-sync add channel channel-label
 Be aware that if [literal]``server.susemanager.fromdir`` is set, {productname} will not be able to check if {scc} credentials are valid or not.
 Instead, a warning sign will be displayed and no SCC online check will be performed.
 ====
+
+An alternative to disconnected setup may be to copy content between servers using Inter-Server Synchronization (ISS).
+For more information, see xref:administration:iss_v2.adoc[Inter-Server Synchronization - Version 2].
