--- a/modules/client-configuration/pages/package-management.adoc
+++ b/modules/client-configuration/pages/package-management.adoc
@@ -58,10 +58,12 @@ Therefore, orphaned packages are usually not available to {productname} clients 
 Orphaned packages can exist as a result of one of the following events:
 
 
-- A repository removes a package. By default, in 5.0, we also unlink such package from the channel, but do not remove it. In 4.3, this was the strict mode behavior.
-- A repository supersedes a package with a newer version and thus removes the previous version.
-- The reposync process got interrupted (e.g. by out of space exception) and downloaded packages were not associated with a channel.
-- Customers manually uploaded packages but did not associate them with any channel.
+* A repository removes a package.
+  By default, in {productname} 5.0, we also unlink such package from the channel, but do not remove it.
+  In {productname} 4.3, this was the strict mode behavior.
+* A repository supersedes a package with a newer version and thus removes the previous version.
+* The reposync process got interrupted (for example, because of an out of space exception) and thus downloaded packages were not associated with a channel.
+* Users manually uploaded packages, but did not associate them with any channel.
 
 Orphaned packages costs space in user environment and cannot easily
 distributed to clients because they are not associated with a channel.
