start with migrate rhel-like clients to liberty https://github.com/SUSE/spacewalk/issues/25025

--- a/modules/reference/pages/systems/system-details/sd-product-migration.adoc
+++ b/modules/reference/pages/systems/system-details/sd-product-migration.adoc
@@ -2,7 +2,7 @@
 = Product Migration
 
 The menu:Systems[Software > Product Migration] section allows you to upgrade clients to the latest service pack of their underlying operating system.
-Product migration also allows you to migrate openSUSE Leap to the corresponding SLE SP level.
+Product migration also allows you to migrate openSUSE Leap to the corresponding SLE SP level or clients such as CentOS, Rocky Linux, Alma Linux, or Oracle Linux to {ssl}.
 Check the product version you want to upgrade the client to, and click btn:[Select Channels].
 
 For more information about service pack upgrades, see xref:client-configuration:client-upgrades-product-migration.adoc[].
