--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
@@ -8,7 +8,7 @@ endif::[]
 
 // We need to figure out which SUMA versions prior to the container release can or should be migrated. Something like any version prior to yyyy.mm and later than.
 
-To migrate a {productname} 4.3 Server to a container, you require a new machine with {sle-micro} 5.5 and [literal]``mgradm`` installed. 
+To migrate a {productname} 4.3 Server to a container, you require a new machine with {sle-micro} 5.5 and [literal]``mgradm`` installed.
 
 
 
@@ -66,7 +66,7 @@ systemctl stop postgresql
 
 [IMPORTANT]
 ====
-You need to have {sle-micro} 5.5 with [litaral]``mgradm`` installed. 
+You need to have {sle-micro} 5.5 with [literal]``mgradm`` installed.
 Do not pre-install {productname} on this server.
 The migration process will take care of the server installation.
 ====
