--- a/modules/client-configuration/pages/package-management.adoc
+++ b/modules/client-configuration/pages/package-management.adoc
@@ -53,7 +53,7 @@ When the profile has been created, you can use it to install more clients with t
 == Orphaned Packages
 
 Orphaned packages are packages synchronized by {productname} that are not associated with a software channel.
-Therefore, orphaned packages are usually not available to {productname} clients and cannot install such packages.
+Therefore, orphaned packages are usually not available to {productname} clients and users cannot install such packages without additional effort.
 
 A package can become orphaned as a result of one of the following events:
 
