add link from reference to client config guide

--- a/modules/client-configuration/pages/package-management.adoc
+++ b/modules/client-configuration/pages/package-management.adoc
@@ -50,6 +50,7 @@ When the profile has been created, you can use it to install more clients with t
 
 
 
+[[package-management-orphaned-packages]]
 == Orphaned Packages
 
 Orphaned packages are packages synchronized by {productname} that are not associated with a software channel.
