--- a/modules/reference/pages/software/manage-packages.adoc
+++ b/modules/reference/pages/software/manage-packages.adoc
@@ -6,4 +6,5 @@ The menu:Software[Manage > Packages] section allows you to manage packages that 
 Select a channel from the drop-down box to see all packages related to that channel.
 If you have administration privileges within your organization, you can also delete packages.
 
-For more information about custom channels, see xref:administration:custom-channels.adoc[].
+* For handling orphaned packages that are packages synchronized by {productname}, but not associated with a software channel, see xref:client-configuration:package-management.adoc#package-management-orphaned-packages[].
+* For more information about custom channels, see xref:administration:custom-channels.adoc[].
