--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
@@ -65,7 +65,7 @@ systemctl stop postgresql
 
 [IMPORTANT]
 ====
-You need to have {sle-micro} 5.5 with [litaral]``mgradm`` installed. 
+You need to have {sle-micro} 5.5 with [literal]``mgradm`` installed.
 Do not pre-install {productname} on this server.
 The migration process will take care of the server installation.
 ====
