info about default contact method and salt bundle vs. minion (#3302)
* info about default contact method and salt bundle vs. minion
https://github.com/SUSE/spacewalk/issues/25121
Co-authored-by: Ornela Marić <omaric@suse.com>

--- a/modules/client-configuration/pages/contact-methods-default.adoc
+++ b/modules/client-configuration/pages/contact-methods-default.adoc
@@ -1,11 +1,12 @@
 [[contact-methods-salt]]
-= Default Contact Method ({salt})
+= Default Contact Method
 
 The default contact method using the {salt} protocol is recommended unless there are specific needs.
+By default, the {salt} Bundle implementation ([package]``venv-salt-minion``) will be deployed.
 For more information about {salt} in general, see xref:specialized-guides:salt/salt-overview.adoc[].
 
 ifeval::[{suma-content} == true]
-The {salt} Contact Method is the best scaling method.
+The default contact method ([literal]``Default``) is the best scaling method.
 All new {productname} features are supported.
 
 [IMPORTANT]
