--- a/modules/client-configuration/pages/contact-methods-intro.adoc
+++ b/modules/client-configuration/pages/contact-methods-intro.adoc
@@ -4,10 +4,11 @@
 There are three contact methods how the {productname} Server can communicate with clients.
 They are based on {salt} protocols.
 
-Which {salt} contact method you use depends on the type of client, and your network architecture:
+Which {salt} contact method you use depends on the type of client and your network architecture:
 
-Default (Salt)::
-is the default choice and is recommended unless there are specific needs.
+Default::
+is recommended unless there are specific user needs.
+By default, the {salt} Bundle implementation will be deployed.
 For more information, see xref:client-configuration:contact-methods-default.adoc[].
 
 SSH Push::
@@ -15,6 +16,7 @@ is useful only if network restrictions make it impossible for clients to establi
 It is supported with the {salt} Bundle only.
 This contact method has serious limitations.
 For more information, see xref:client-configuration:contact-methods-saltssh.adoc[].
+
 SSH Push (with tunnel)::
 is the same as SSH Push, but with using a secured communication tunnel.
 For more information, see xref:client-configuration:contact-methods-saltssh-tunnel.adoc[].
@@ -22,14 +24,20 @@ For more information, see xref:client-configuration:contact-methods-saltssh-tunn
 
 Implementation of {salt} communication software options:
 
-Salt Bundle::
+Salt Bundle ([package]``venv-salt-minion``)::
 is a single binary package containing {salt} Minion, Python 3, required Python modules, and libraries.
 Thus the {salt} contact method is independent from software installed on the client.
 Using the {salt} Bundle is the default.
 It is the only supported implementation for the SSH Push or SSH Push (with tunnel) contact method.
 For more information, see xref:client-configuration:contact-methods-saltbundle.adoc[].
-Salt Minion::
+
+Salt Minion ([package]``salt-minion``)::
 is {salt} software installed on the client system.
+The SSH Push or SSH Push (with tunnel) contact method is not supported with this Salt Minion.
+
+([package]``salt-minion``) is still a supported implementation for {sle} 15 and derivatives (like {sle-micro}).
+It is not the default, and there are a number of reasons [package]``venv-salt-minion`` is preferred for {productname} clients.
+
 
 
 [IMPORTANT]
