use macros and mention in client supported features

--- a/modules/client-configuration/pages/supported-features-almalinux.adoc
+++ b/modules/client-configuration/pages/supported-features-almalinux.adoc
@@ -72,15 +72,15 @@ The icons in this table indicate:
 | {check}
 | {check}
 
-| Product migration
-| N/A
-| N/A
-
-| Basic Virtual Guest Management {star}
+| Product migration {star}
 | {check}
 | {check}
 
-| Advanced Virtual Guest Management {star}
+| Basic Virtual Guest Management {star}{star}
+| {check}
+| {check}
+
+| Advanced Virtual Guest Management {star}{star}
 | {check}
 | {check}
 
@@ -198,7 +198,11 @@ The icons in this table indicate:
 
 |===
 
-{star} Virtual Guest Management:
+
+{star} to matching {sll}
+
+
+{star}{star} Virtual Guest Management:
 
 In this table, virtual guest management is split into basic and advanced.
 
