--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -2,6 +2,7 @@
 = Product Migration
 
 Product migration allows you to upgrade SLE-based client systems from an Service Pack (SP) level to a later one.
+You can also upgrade clients such as {almalinux}, {centos}, {oracle}, or {rocky} to {sll}.
 For example, you can migrate {sles}{nbsp}15{nbsp}SP1 to {sles}{nbsp}15{nbsp}SP2.
 
 Product migration is for upgrading within the same major version.
