--- a/modules/client-configuration/pages/supported-features-oracle.adoc
+++ b/modules/client-configuration/pages/supported-features-oracle.adoc
@@ -81,17 +81,17 @@ The icons in this table indicate:
 | {check}
 | {check}
 
-| Product migration
-| N/A
-| N/A
-| N/A
-
-| Basic Virtual Guest Management {star}
+| Product migration {star}
 | {check}
 | {check}
 | {check}
 
-| Advanced Virtual Guest Management {star}
+| Basic Virtual Guest Management {star}{star}
+| {check}
+| {check}
+| {check}
+
+| Advanced Virtual Guest Management {star}{star}
 | {check}
 | {check}
 | {check}
@@ -238,7 +238,10 @@ The icons in this table indicate:
 
 |===
 
-{star} Virtual Guest Management:
+{star} to matching {sll}
+
+
+{star}{star} Virtual Guest Management:
 
 In this table, virtual guest management is split into basic and advanced.
 
