--- a/modules/client-configuration/pages/supported-features-rocky.adoc
+++ b/modules/client-configuration/pages/supported-features-rocky.adoc
@@ -71,15 +71,15 @@ The icons in this table indicate:
 | {check}
 | {check}
 
-| Product migration
-| N/A
-| N/A
-
-| Basic Virtual Guest Management {star}
+| Product migration {star}
 | {check}
 | {check}
 
-| Advanced Virtual Guest Management {star}
+| Basic Virtual Guest Management {star}{star}
+| {check}
+| {check}
+
+| Advanced Virtual Guest Management {star}{star}
 | {check}
 | {check}
 
@@ -197,7 +197,11 @@ The icons in this table indicate:
 
 |===
 
-{star} Virtual Guest Management:
+
+{star} to matching {sll}
+
+
+{star}{star} Virtual Guest Management:
 
 In this table, virtual guest management is split into basic and advanced.
 
