--- a/modules/client-configuration/pages/supported-features-almalinux.adoc
+++ b/modules/client-configuration/pages/supported-features-almalinux.adoc
@@ -74,15 +74,15 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 
-| Product migration
-| N/A
-| N/A
-
-| Basic Virtual Guest Management {star}
+| Product migration {star}
 | {salt}
 | {salt}
 
-| Advanced Virtual Guest Management {star}
+| Basic Virtual Guest Management {star}{star}
+| {salt}
+| {salt}
+
+| Advanced Virtual Guest Management {star}{star}
 | {salt}
 | {salt}
 
@@ -200,7 +200,11 @@ The icons in this table indicate:
 
 |===
 
-{star} Virtual Guest Management:
+
+{star} to matching {sll}
+
+
+{star}{star} Virtual Guest Management:
 
 In this table, virtual guest management is split into basic and advanced.
 
