--- a/modules/client-configuration/pages/supported-features-centos.adoc
+++ b/modules/client-configuration/pages/supported-features-centos.adoc
@@ -62,13 +62,13 @@ The icons in this table indicate:
 | System set manager (SSM)
 | {check}
 
-| Product migration
-| N/A
-
-| Basic Virtual Guest Management {star}
+| Product migration {star}
 | {check}
 
-| Advanced Virtual Guest Management {star}
+| Basic Virtual Guest Management {star}{star}
+| {salt}
+
+| Advanced Virtual Guest Management {star}{star}
 | {salt}
 
 | Virtual Guest Installation (Kickstart), as Host OS
@@ -157,7 +157,10 @@ The icons in this table indicate:
 
 |===
 
-{star} Virtual Guest Management:
+{star} to matching {sll}
+
+
+{star}{star} Virtual Guest Management:
 
 In this table, virtual guest management is split into basic and advanced.
 
