--- a/modules/client-configuration/pages/supported-features-oracle.adoc
+++ b/modules/client-configuration/pages/supported-features-oracle.adoc
@@ -83,17 +83,17 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 
-| Product migration
-| N/A
-| N/A
-| N/A
-
-| Basic Virtual Guest Management {star}
+| Product migration {star}
 | {check}
 | {salt}
 | {salt}
 
-| Advanced Virtual Guest Management {star}
+| Advanced Virtual Guest Management {star}{star}
+| {salt}
+| {salt}
+| {salt}
+
+| Basic Virtual Guest Management {star}{star}
 | {salt}
 | {salt}
 | {salt}
@@ -240,7 +240,10 @@ The icons in this table indicate:
 
 |===
 
-{star} Virtual Guest Management:
+{star} to matching {sll}
+
+
+{star}{star} Virtual Guest Management:
 
 In this table, virtual guest management is split into basic and advanced.
 
