--- a/modules/client-configuration/pages/supported-features-sll.adoc
+++ b/modules/client-configuration/pages/supported-features-sll.adoc
@@ -88,16 +88,16 @@ The icons in this table indicate:
 | {salt}
 
 | Product migration
-| N/A
+| {check} {star}
 | N/A
 | N/A
 
-| Basic Virtual Guest Management {star}
+| Basic Virtual Guest Management {star}{star}
 | {check}
 | {salt}
 | {salt}
 
-| Advanced Virtual Guest Management {star}
+| Advanced Virtual Guest Management {star}{star}
 | {salt}
 | {salt}
 | {salt}
@@ -244,7 +244,10 @@ The icons in this table indicate:
 
 |===
 
-{star} Virtual Guest Management:
+{star} to matching {sll} LTSS
+
+
+{star}{star} Virtual Guest Management:
 
 In this table, virtual guest management is split into basic and advanced.
 
