--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
@@ -23,12 +23,12 @@ Images for {productname} {productnumber} are available at link:https://www.suse.
 
 [NOTE]
 ====
-For more information on preparing raw images see:
+For more information on preparing raw images, see:
 
 * link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#sec-raw-preparation[]
 * link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#cha-images-procedure[]
 
-For additional information on the self install images see:
+For additional information on the self install images, see:
 
 * link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#cha-selfinstal-procedure[]
 ====
